# bird-bone-ai

./: .env.example  .flake8  .gitattributes  .gitignore  .ruff.toml  CI_CD_VALIDATION_SUMMARY.md  Dockerfile  EPICS.md  GITHUB_ISSUES.md  MODULINK_APPROACH.md  QUALITY_ENFORCEMENT_COMPLETE.md  README-CICD.md  README.md  USER_STORIES.md  docker-compose.yml  environment.yml  github-updates-needed.md  pyproject.toml  requirements.txt  scripts.json  setup.py
.github/workflows/: ci.yml
config/: README.md
diffs/: README.md
docs/: README.md  automated-code-quality-enforcement.md  git-lfs-guide.md  git-push-implementation-summary.md  git-push-quality-checks.md  modulink-best-practices.md
models/: .gitignore  README.md  dvc.yaml
modulink_extensions/magic_converter/: ADAPTATION_CHAIN_COMPLETE.md  DISCOVERY_CHAIN_COMPLETE.md  PHASE_3_COMPLETE.md  __init__.py
modulink_extensions/magic_converter/chains/: __init__.py  adaptation_chain.py  discovery_chain.py
modulink_extensions/magic_converter/docs/: MIGRATION_GUIDE.md
modulink_extensions/magic_converter/links/: __init__.py
modulink_extensions/magic_converter/links/adaptation/: __init__.py  batch_wrapper_generation_link.py  domain_mapping_link.py
modulink_extensions/magic_converter/links/discovery/: __init__.py  extract_functions_link.py  scan_codebase_link.py
modulink_extensions/magic_converter/tests/: test_scan_codebase_link.py
notebooks/: README.md
pipelines/: README.md
requirements/: README.md
research/: README.md
research/decision-logs/: density-loss-vs-growth-plate-terminology.md  issue-2-completion-summary.md  issue-2-library-selection.md  issue-3-completion-summary.md  issue-4-implementation-plan.md
research/library-analysis/: README.md  compatibility-matrix.md  compression-libraries.md  core-ml-foundation.md  development-infrastructure.md
scripts/: README.md  __init__.py  dvc_chain.py  git-push.sh  pre-push.sh  run.sh  setup-quality-enforcement.sh  setup_dvc.py  setup_environment.sh  setup_git_lfs.py  validate_environment.py
scripts/ci/: configure_security_settings.py  run_cicd_pipeline.py  setup_environment_validation.py  setup_testing_pipeline.py  validate_ci_cd_operations.py
scripts/ci/middleware/: __init__.py  ci_error_handler_middleware.py  ci_logging_middleware.py  deployment_middleware.py  security_middleware.py  testing_middleware.py  validation_middleware.py
scripts/dvc/: __init__.py  configure_dvc_cache.py  create_sample_pipeline.py  initialize_dvc_subdirectory.py  setup_dvcignore.py  test_dvc_operations.py  validate_prerequisites.py
scripts/dvc/middleware/: __init__.py  error_handler_middleware.py  file_logging_middleware.py  logging_middleware.py
tests/: test_git_lfs.py
